--- a/KYPresentationControllerDemo/Base.lproj/Main.storyboard
+++ b/KYPresentationControllerDemo/Base.lproj/Main.storyboard
@@ -87,7 +87,7 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="centerY" secondItem="iCY-zg-O1I" secondAttribute="centerY" id="2br-fr-0to"/>
                             <constraint firstAttribute="centerX" secondItem="iCY-zg-O1I" secondAttribute="centerX" id="pAj-51-XbZ"/>
